# cython-exploration

./: .gitignore  README.md
benchmark/: README.md  bench.py  plot.py  pymatrix.py  pyproject.toml
peak_utils/: README.md  pyproject.toml  setup.py
peak_utils/src/peak_utils/: __init__.py  matrix.c  matrix.pxd  matrix.pyx
