[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catppuccin>=2.5.0",
    "matplotlib>=3.10.8",
    "peak-utils",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
peak-utils = { path = "../peak_utils/dist/peak_utils-0.1.0-cp314-cp314-macosx_11_0_arm64.whl" }
