[project]
name = "peak-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vishvam10", email = "s.vishvam1025@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
peak-utils = "peak_utils:main"

[build-system]
requires = ["setuptools>=61", "wheel", "Cython"]
build-backend = "setuptools.build_meta"