[project]
name = "peak-utils"
version = "0.1.0"
description = "A lightweight experimental matrix library built with Cython to explore how C/Python interops, build systems, and performance tuning"
readme = "README.md"
authors = [
    { name = "Vishvam10", email = "s.vishvam1025@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
peak-utils = "peak_utils:main"

[build-system]
requires = ["setuptools>=61", "wheel", "Cython"]
build-backend = "setuptools.build_meta"